Update & fix texi docs to build clean against makeinfo v5.2
This seemingly monster changeset is nothing more than simple compile
warning fixes.  But now the docs compile clean, and clean is good. :-)

	* info/lispref/abbrevs.texi
	* info/lispref/annotations.texi
	* info/lispref/backups.texi
	* info/lispref/buffers.texi
	* info/lispref/building.texi
	* info/lispref/commands.texi
	* info/lispref/compile.texi
	* info/lispref/consoles-devices.texi
	* info/lispref/control.texi
	* info/lispref/databases.texi
	* info/lispref/debugging.texi
	* info/lispref/dialog.texi
	* info/lispref/display.texi
	* info/lispref/ent.texi
	* info/lispref/eval.texi
	* info/lispref/extents.texi
	* info/lispref/faces.texi
	* info/lispref/files.texi
	* info/lispref/frames.texi
	* info/lispref/functions.texi
	* info/lispref/glyphs.texi
	* info/lispref/gutter.texi
	* info/lispref/hash-tables.texi
	* info/lispref/help.texi
	* info/lispref/internationalization.texi
	* info/lispref/intro.texi
	* info/lispref/keymaps.texi
	* info/lispref/ldap.texi
	* info/lispref/lispref.texi
	* info/lispref/lists.texi
	* info/lispref/loading.texi
	* info/lispref/macros.texi
	* info/lispref/markers.texi
	* info/lispref/menus.texi
	* info/lispref/minibuf.texi
	* info/lispref/modes.texi
	* info/lispref/mule.texi
	* info/lispref/numbers.texi
	* info/lispref/objects.texi
	* info/lispref/openssl.texi
	* info/lispref/os.texi
	* info/lispref/packaging.texi
	* info/lispref/positions.texi
	* info/lispref/postgresql.texi
	* info/lispref/processes.texi
	* info/lispref/range-tables.texi
	* info/lispref/scrollbars.texi
	* info/lispref/searching.texi
	* info/lispref/sequences.texi
	* info/lispref/specifiers.texi
	* info/lispref/streams.texi
	* info/lispref/strings.texi
	* info/lispref/symbols.texi
	* info/lispref/syntax.texi
	* info/lispref/text.texi
	* info/lispref/tips.texi
	* info/lispref/toolbar.texi
	* info/lispref/variables.texi
	* info/lispref/windows.texi
	* info/lispref/x-windows.texi
	* info/sxemacs-faq.texi
	* info/sxema

--- a/info/lispref/abbrevs.texi
+++ b/info/lispref/abbrevs.texi
@@ -43,7 +43,7 @@ Mode, sxemacs, The SXEmacs User's Manual}.
 * Standard Abbrev Tables::      Abbrev tables used by various major modes.
 @end menu
 
-@node Abbrev Mode
+@node Abbrev Mode, Abbrev Tables, Abbrevs, Abbrevs
 @section Setting Up Abbrev Mode
 
   Abbrev mode is a minor mode controlled by the value of the variable
@@ -306,7 +306,7 @@ aborts expansion if it is not confirmed.
           (error "Not expanding this abbrev"))))
 @end smallexample
 
-@node Standard Abbrev Tables
+@node Standard Abbrev Tables,  , Abbrev Expansion, Abbrevs
 @section Standard Abbrev Tables
 
   Here we list the variables that hold the abbrev tables for the
