--- a/info/lispref/lists.texi
+++ b/info/lispref/lists.texi
@@ -33,7 +33,7 @@ the whole list.
 @end menu
 
 
-@node Cons Cells
+@node Cons Cells, Lists as Boxes, Lists, Lists
 @section Lists and Cons Cells
 @cindex lists and cons cells
 @cindex @code{nil} and lists
@@ -67,7 +67,7 @@ considered to have @code{nil} as its @sc{cdr} (and also as its
 elements of @var{l} except the first.
 
 
-@node Lists as Boxes
+@node Lists as Boxes, List-related Predicates, Cons Cells, Lists
 @section Lists as Linked Pairs of Boxes
 @cindex box representation for lists
 @cindex lists represented as boxes
@@ -151,7 +151,7 @@ two-element list:
 lists, and for more ``box and arrow'' illustrations of lists.
 
 
-@node List-related Predicates
+@node List-related Predicates, List Elements, Lists as Boxes, Lists
 @section Predicates on Lists
 
   The following predicates test whether a Lisp object is an atom, is a
@@ -223,7 +223,7 @@ considered a list and @code{not} when it is considered a truth value
 @need 2000
 
 
-@node List Elements
+@node List Elements, Building Lists, List-related Predicates, Lists
 @section Accessing Elements of Lists
 @cindex list elements
 
@@ -445,7 +445,7 @@ elements of @var{list}.
 @end defun
 
 
-@node Building Lists
+@node Building Lists, Modifying Lists, List Elements, Lists
 @section Building Cons Cells and Lists
 @cindex cons cells
 @cindex building lists
@@ -678,7 +678,7 @@ x
 @end defun
 
 
-@node Modifying Lists
+@node Modifying Lists, Sets And Lists, Building Lists, Lists
 @section Modifying Existing List Structure
 
   You can modify the @sc{car} and @sc{cdr} contents of a cons cell with the
@@ -703,7 +703,7 @@ new @sc{car} or @sc{cdr}.
 @end menu
 
 
-@node Setcar
+@node Setcar, Setcdr, Modifying Lists, Modifying Lists
 @subsection Altering List Elements with @code{setcar}
 
   Changing the @sc{car} of a cons cell is done with @code{setcar}.  When
@@ -806,7 +806,7 @@ x2:              |
 @end example
 
 
-@node Setcdr
+@node Setcdr, Rearrangement, Setcar, Modifying Lists
 @subsection Altering the CDR of a List
 
   The lowest-level primitive for modifying a @sc{cdr} is @code{setcdr}:
@@ -907,7 +907,7 @@ x1
 @end smallexample
 
 
-@node Rearrangement
+@node Rearrangement,  , Setcdr, Modifying Lists
 @subsection Functions that Rearrange Lists
 @cindex rearrangement of lists
 @cindex modification of lists
@@ -1117,7 +1117,7 @@ useful example of @code{sort}.
 @end defun
 
 
-@node Sets And Lists
+@node Sets And Lists, Association Lists, Modifying Lists, Lists
 @section Using Lists as Sets
 @cindex lists as sets
 @cindex sets
@@ -1277,7 +1277,7 @@ Lisp versions do not use @code{equal} to compare elements.
 for another way to add an element to a list stored in a variable.
 
 
-@node Association Lists
+@node Association Lists, Property Lists, Sets And Lists, Lists
 @section Association Lists
 @cindex association list
 @cindex alist
@@ -1565,7 +1565,7 @@ the associations of one copy without affecting the other:
 @end defun
 
 
-@node Property Lists
+@node Property Lists, Skip Lists, Association Lists, Lists
 @section Property Lists
 @cindex property list
 @cindex plist
@@ -1613,7 +1613,7 @@ with it.  This means that it's a malformed or circular plist.
 @end menu
 
 
-@node Working With Normal Plists
+@node Working With Normal Plists, Working With Lax Plists, Property Lists, Property Lists
 @subsection Working With Normal Plists
 
 @defun plist-get plist property &optional default
@@ -1670,7 +1670,7 @@ to @code{setq} the value back into where it came from.
 @end defun
 
 
-@node Working With Lax Plists
+@node Working With Lax Plists, Converting Plists To/From Alists, Working With Normal Plists, Property Lists
 @subsection Working With Lax Plists
 
 Recall that a @dfn{lax plist} is a property list whose keys are compared
@@ -1725,7 +1725,7 @@ to @code{setq} the value back into where it came from.
 @end defun
 
 
-@node Converting Plists To/From Alists
+@node Converting Plists To/From Alists,  , Working With Lax Plists, Property Lists
 @subsection Converting Plists To/From Alists
 
 @defun alist-to-plist alist
@@ -1778,7 +1778,7 @@ equivalent association-list form.  The alist is returned.
 @end defun
 
 
-@node Skip Lists
+@node Skip Lists, Weak Lists, Property Lists, Lists
 @section Skip Lists
 @cindex skip list
 
@@ -1899,7 +1899,7 @@ processed by @var{function}.
 
 
 
-@node Weak Lists
+@node Weak Lists, DL-Lists, Skip Lists, Lists
 @section Weak Lists
 @cindex weak list
 
@@ -1961,7 +1961,7 @@ This function changes the list contained in a weak-list object.
 @end defun
 
 
-@node DL-Lists
+@node DL-Lists, Bloom Filters, Weak Lists, Lists
 @section Doubly-Linked Lists
 @cindex dl-list
 @cindex doubly-linked list
@@ -2102,7 +2102,7 @@ through the front.
 @end example
 
 
-@node Bloom Filters
+@node Bloom Filters,  , DL-Lists, Lists
 @section Bloom Filters
 @cindex Bloom filters
 
