--- a/info/lispref/positions.texi
+++ b/info/lispref/positions.texi
@@ -29,7 +29,7 @@ surrounding characters.  @xref{Markers}.
 @end menu
 
 
-@node Point
+@node Point, Motion, Positions, Positions
 @section Point
 @cindex point
 
@@ -120,7 +120,7 @@ current buffer, as of the last time it was read in, saved or auto-saved.
 @end defvar
 
 
-@node Motion
+@node Motion, Excursions, Point, Positions
 @section Motion
 
   Motion functions change the value of point, either relative to the
@@ -138,7 +138,7 @@ or relative to the edges of the selected window.  @xref{Point}.
 @end menu
 
 
-@node Character Motion
+@node Character Motion, Word Motion, Motion, Motion
 @subsection Motion by Characters
 
   These functions move point based on a count of characters.
@@ -193,7 +193,7 @@ In an interactive call, @var{count} is the numeric prefix argument.
 @end deffn
 
 
-@node Word Motion
+@node Word Motion, Buffer End Motion, Character Motion, Motion
 @subsection Motion by Words
 
   These functions for parsing words use the syntax table to decide
@@ -231,7 +231,7 @@ words.  Otherwise, they do not.
 @end defvar
 
 
-@node Buffer End Motion
+@node Buffer End Motion, Text Lines, Word Motion, Motion
 @subsection Motion to an End of the Buffer
 
   To move point to the beginning of the buffer, write:
@@ -280,7 +280,7 @@ Don't use this function in Lisp programs!
 @end deffn
 
 
-@node Text Lines
+@node Text Lines, Screen Lines, Buffer End Motion, Motion
 @subsection Motion by Text Lines
 @cindex lines
 
@@ -461,7 +461,7 @@ These functions do not move point, but test whether it is already at the
 beginning or end of a line.
 
 
-@node Screen Lines
+@node Screen Lines, List Motion, Text Lines, Motion
 @subsection Motion by Screen Lines
 
   The line functions in the previous section count text lines, delimited
@@ -610,7 +610,7 @@ beginning of the first screen line.  @xref{Minibuffer Misc}.
 @end ignore
 
 
-@node List Motion
+@node List Motion, Skipping Characters, Screen Lines, Motion
 @subsection Moving over Balanced Expressions
 @cindex sexp motion
 @cindex Lisp expression motion
@@ -704,7 +704,7 @@ open-parenthesis syntax.
 @end defopt
 
 
-@node Skipping Characters
+@node Skipping Characters,  , List Motion, Motion
 @subsection Skipping Characters
 @cindex skipping characters
 
@@ -763,7 +763,7 @@ This function moves point backward, skipping characters that match
 @end defun
 
 
-@node Excursions
+@node Excursions, Narrowing, Motion, Positions
 @section Excursions
 @cindex excursion
 
@@ -847,7 +847,7 @@ restores the selected window and nothing else.
 @end defspec
 
 
-@node Narrowing
+@node Narrowing,  , Excursions, Positions
 @section Narrowing
 @cindex narrowing
 @cindex restriction (in a buffer)
