--- a/info/lispref/text.texi
+++ b/info/lispref/text.texi
@@ -59,7 +59,7 @@ buffer, together with their properties (when relevant).
 @end menu
 
 
-@node Near Point
+@node Near Point, Buffer Contents, Text, Text
 @section Examining Text Near Point
 
   Many functions are provided to look at the characters around point.
@@ -171,7 +171,7 @@ the end of a line.
 @end defun
 
 
-@node Buffer Contents
+@node Buffer Contents, Comparing Text, Near Point, Text
 @section Examining Buffer Contents
 
   This section describes two functions that allow a Lisp program to
@@ -237,7 +237,7 @@ copied from the buffer would make the comparisons fail.
 @end ignore
 
 
-@node Comparing Text
+@node Comparing Text, Insertion, Buffer Contents, Text
 @section Comparing Text
 @cindex comparing buffer text
 
@@ -273,7 +273,7 @@ at the second character.
 @end defun
 
 
-@node Insertion
+@node Insertion, Commands for Insertion, Comparing Text, Text
 @section Inserting Text
 @cindex insertion of text
 @cindex text insertion
@@ -376,7 +376,7 @@ We hold these truth@point{}
 @end defun
 
 
-@node Commands for Insertion
+@node Commands for Insertion, Deletion, Insertion, Text
 @section User-Level Insertion Commands
 
   This section describes higher-level commands for inserting text,
@@ -451,7 +451,7 @@ buffer-local when set in any fashion.
 @end defvar
 
 
-@node Deletion
+@node Deletion, User-Level Deletion, Commands for Insertion, Text
 @section Deleting Text
 
 @cindex deletion vs killing
@@ -538,7 +538,7 @@ The value returned is always @code{nil}.
 @end deffn
 
 
-@node User-Level Deletion
+@node User-Level Deletion, The Kill Ring, Deletion, Text
 @section User-Level Deletion Commands
 
   This section describes higher-level commands for deleting text,
@@ -672,7 +672,7 @@ A blank line is defined as a line containing only tabs and spaces.
 @end deffn
 
 
-@node The Kill Ring
+@node The Kill Ring, Undo, User-Level Deletion, Text
 @section The Kill Ring
 @cindex kill ring
 
@@ -717,7 +717,7 @@ would be difficult to change the terminology now.
 @end menu
 
 
-@node Kill Ring Concepts
+@node Kill Ring Concepts, Kill Functions, The Kill Ring, The Kill Ring
 @subsection Kill Ring Concepts
 
   The kill ring records killed text as strings in a list, most recent
@@ -744,7 +744,7 @@ change the list itself---the most recent entry always comes first in the
 list.
 
 
-@node Kill Functions
+@node Kill Functions, Yank Commands, Kill Ring Concepts, The Kill Ring
 @subsection Functions for Killing
 
   @code{kill-region} is the usual subroutine for killing text.  Any
@@ -786,7 +786,7 @@ support Emacs 18.  For Emacs 19, it is better to use @code{kill-new} or
 @end deffn
 
 
-@node Yank Commands
+@node Yank Commands, Low-Level Kill Ring, Kill Functions, The Kill Ring
 @subsection Functions for Yanking
 
   @dfn{Yanking} means reinserting an entry of previously killed text
@@ -833,7 +833,7 @@ The value is always @code{nil}.
 @end deffn
 
 
-@node Low-Level Kill Ring
+@node Low-Level Kill Ring, Internals of Kill Ring, Yank Commands, The Kill Ring
 @subsection Low-Level Kill Ring
 
   These functions and variables provide access to the kill ring at a lower
@@ -905,7 +905,7 @@ to the newly killed text.
 @end defvar
 
 
-@node Internals of Kill Ring
+@node Internals of Kill Ring,  , Low-Level Kill Ring, The Kill Ring
 @subsection Internals of the Kill Ring
 
   The variable @code{kill-ring} holds the kill ring contents, in the
@@ -976,7 +976,7 @@ value for @code{kill-ring-max} is 30.
 @end defopt
 
 
-@node Undo
+@node Undo, Maintaining Undo, The Kill Ring, Text
 @section Undo
 @cindex redo
 
@@ -1076,7 +1076,7 @@ continuing to undo.
 @end defun
 
 
-@node Maintaining Undo
+@node Maintaining Undo, Filling, Undo, Text
 @section Maintaining Undo Lists
 
   This section describes how to enable and disable undo information for
@@ -1136,7 +1136,7 @@ change group is never discarded no matter how big it is.
 @end defvar
 
 
-@node Filling
+@node Filling, Margins, Maintaining Undo, Text
 @section Filling
 @cindex filling, explicit
 
@@ -1280,7 +1280,7 @@ newlines'' act as paragraph separators.
 @end defvar
 
 
-@node Margins
+@node Margins, Auto Filling, Filling, Text
 @section Margins for Filling
 
 @defopt fill-prefix
@@ -1376,7 +1376,7 @@ becomes buffer-local when set in any fashion.
 @end defvar
 
 
-@node Auto Filling
+@node Auto Filling, Sorting, Margins, Text
 @section Auto Filling
 @cindex filling, automatic
 @cindex Auto Fill mode
@@ -1406,7 +1406,7 @@ was renamed to @code{auto-fill-function} in version 19.
 @end defvar
 
 
-@node Sorting
+@node Sorting, Columns, Auto Filling, Text
 @section Sorting Text
 @cindex sorting text
 
@@ -1635,7 +1635,7 @@ and so cannot work properly on text containing tab characters.  Use
 @end deffn
 
 
-@node Columns
+@node Columns, Indentation, Sorting, Text
 @comment  node-name,  next,  previous,  up
 @section Counting Columns
 @cindex columns
@@ -1707,7 +1707,7 @@ The return value is the column number actually moved to.
 @end defun
 
 
-@node Indentation
+@node Indentation, Case Changes, Columns, Text
 @section Indentation
 @cindex indentation
 
@@ -1726,7 +1726,7 @@ count from zero at the left margin.
 @end menu
 
 
-@node Primitive Indent
+@node Primitive Indent, Mode-Specific Indent, Indentation, Indentation
 @subsection Indentation Primitives
 
   This section describes the primitive functions used to count and
@@ -1761,7 +1761,7 @@ this variable automatically makes it local to the current buffer.
 @end defopt
 
 
-@node Mode-Specific Indent
+@node Mode-Specific Indent, Region Indent, Primitive Indent, Indentation
 @subsection Indentation Controlled by Major Mode
 
   An important function of each major mode is to customize the @key{TAB}
@@ -1820,7 +1820,7 @@ by @code{left-margin}.
 @end deffn
 
 
-@node Region Indent
+@node Region Indent, Relative Indent, Mode-Specific Indent, Indentation
 @subsection Indenting an Entire Region
 
   This section describes commands that indent all the lines in the
@@ -1888,7 +1888,7 @@ the beginning of the line (if @var{nochange-regexp} is non-@code{nil}).
 @end deffn
 
 
-@node Relative Indent
+@node Relative Indent, Indent Tabs, Region Indent, Indentation
 @subsection Indentation Relative to Previous Lines
 
   This section describes two commands that indent the current line
@@ -1966,7 +1966,7 @@ column, this command does nothing.
 @end deffn
 
 
-@node Indent Tabs
+@node Indent Tabs, Motion by Indent, Relative Indent, Indentation
 @subsection Adjustable ``Tab Stops''
 @cindex tabs stops for indentation
 
@@ -1996,7 +1996,7 @@ interactively.
 @end defopt
 
 
-@node Motion by Indent
+@node Motion by Indent,  , Indent Tabs, Indentation
 @subsection Indentation-Based Motion Commands
 
   These commands, primarily for interactive use, act based on the
@@ -2022,7 +2022,7 @@ nonblank character on that line.  It returns @code{nil}.
 @end deffn
 
 
-@node Case Changes
+@node Case Changes, Text Properties, Indentation, Text
 @section Case Changes
 @cindex case changes
 
@@ -2115,7 +2115,7 @@ the numeric prefix argument.
 @end deffn
 
 
-@node Text Properties
+@node Text Properties, Substitution, Case Changes, Text
 @section Text Properties
 @cindex text properties
 @cindex attributes of text
@@ -2162,7 +2162,7 @@ along with the characters; this includes such diverse functions as
 @end menu
 
 
-@node Examining Properties
+@node Examining Properties, Changing Properties, Text Properties, Text Properties
 @subsection Examining Text Properties
 
   The simplest way to examine text properties is to ask for the value of
@@ -2225,7 +2225,7 @@ an example:
 @end defvar
 
 
-@node Changing Properties
+@node Changing Properties, Property Search, Examining Properties, Text Properties
 @subsection Changing Text Properties
 
   The primitives for changing properties apply to a specified range of
@@ -2312,7 +2312,7 @@ See also the function @code{buffer-substring-without-properties}
 but does not copy its properties.
 
 
-@node Property Search
+@node Property Search, Special Properties, Changing Properties, Text Properties
 @subsection Property Search Functions
 
 In typical use of text properties, most of the time several or many
@@ -2419,7 +2419,7 @@ for @var{object} is the current buffer.
 @end defun
 
 
-@node Special Properties
+@node Special Properties, Saving Properties, Property Search, Text Properties
 @subsection Properties with Special Meanings
 
 The predefined properties are the same as those for extents.
@@ -2430,7 +2430,7 @@ The predefined properties are the same as those for extents.
 @end ignore
 
 
-@node Saving Properties
+@node Saving Properties, Fields, Special Properties, Text Properties
 @subsection Saving Text Properties in Files
 @cindex text properties in files
 @cindex saving text properties
@@ -2497,7 +2497,7 @@ types that are reasonably flexible, and not too hard to encode.
 @xref{Format Conversion}, for a related feature.
 
 
-@node Fields
+@node Fields,  , Saving Properties, Text Properties
 @subsection Fields
 @cindex text fields
 @cindex fields
@@ -2621,7 +2621,7 @@ boundaries are ignored and this function always returns @var{new-pos}.
 @end defun
 
 
-@node Substitution
+@node Substitution, Registers, Text Properties, Text
 @section Substituting for a Character Code
 
   The following functions replace characters within a specified region
@@ -2719,7 +2719,7 @@ e in the uffer.
 @end defun
 
 
-@node Registers
+@node Registers, Transposition, Substitution, Text
 @section Registers
 @cindex registers
 
@@ -2840,7 +2840,7 @@ This function stores the current frame configuration in register
 @end ignore
 
 
-@node Transposition
+@node Transposition, Change Hooks, Registers, Text
 @section Transposition of Text
 
   This subroutine is used by the transposition commands.
@@ -2860,7 +2860,7 @@ all markers unrelocated.
 @end defun
 
 
-@node Change Hooks
+@node Change Hooks, Transformations, Transposition, Text
 @section Change Hooks
 @cindex change hooks
 @cindex hooks for text changes
@@ -2914,7 +2914,7 @@ that was previously in the unmodified state.
 @end defvar
 
 
-@node Transformations
+@node Transformations,  , Change Hooks, Text
 @section Textual transformations---MD5 and base64 support
 @cindex MD5 digests
 @cindex base64
