--- a/info/lispref/variables.texi
+++ b/info/lispref/variables.texi
@@ -42,7 +42,7 @@ variable.
 @end menu
 
 
-@node Global Variables
+@node Global Variables, Constant Variables, Variables, Variables
 @section Global Variables
 @cindex global variable
 
@@ -93,7 +93,7 @@ x
 @end example
 
 
-@node Constant Variables
+@node Constant Variables, Local Variables, Global Variables, Variables
 @section Variables That Never Change
 @vindex nil
 @vindex t
@@ -118,7 +118,7 @@ nil @equiv{} 'nil
 @end example
 
 
-@node Local Variables
+@node Local Variables, Void Variables, Constant Variables, Variables
 @section Local Variables
 @cindex binding local variables
 @cindex local variables
@@ -263,7 +263,7 @@ that Lisp avoids infinite recursion on an ill-defined function.
 @end defvar
 
 
-@node Void Variables
+@node Void Variables, Defining Variables, Local Variables, Variables
 @section When a Variable is ``Void''
 @kindex void-variable
 @cindex void variable
@@ -378,7 +378,7 @@ more precisely, if its current binding is not void.  It returns
 @end defun
 
 
-@node Defining Variables
+@node Defining Variables, Accessing Variables, Void Variables, Variables
 @section Defining Global Variables
 @cindex variable definition
 
@@ -565,7 +565,7 @@ level in a file, where normally no local binding is in effect, and make
 sure to load the file before making a local binding for the variable.
 
 
-@node Accessing Variables
+@node Accessing Variables, Setting Variables, Defining Variables, Variables
 @section Accessing Variable Values
 
   The usual way to reference a variable is to write the symbol which
@@ -617,7 +617,7 @@ local binding nor a global value.
 @end defun
 
 
-@node Setting Variables
+@node Setting Variables, Variable Scoping, Accessing Variables, Variables
 @section How to Alter a Variable Value
 
   The usual way to change the value of a variable is with the special
@@ -770,7 +770,7 @@ foo                       ;; @r{@code{foo} was changed.}
 @end example
 
 
-@node Variable Scoping
+@node Variable Scoping, Buffer-Local Variables, Setting Variables, Variables
 @section Scoping Rules for Variable Bindings
 
   A given symbol @code{foo} may have several local variable bindings,
@@ -809,7 +809,7 @@ are dynamically scoped, like variables in SXEmacs Lisp.
 @end menu
 
 
-@node Scope
+@node Scope, Extent, Variable Scoping, Variable Scoping
 @subsection Scope
 
   SXEmacs Lisp uses @dfn{indefinite scope} for local variable bindings.
@@ -870,7 +870,7 @@ by @code{foo} instead of the one bound by @code{binder}.
 @end itemize
 
 
-@node Extent
+@node Extent, Impl of Scope, Scope, Variable Scoping
 @subsection Extent
 
   @dfn{Extent} refers to the time during program execution that a
@@ -907,7 +907,7 @@ but record additional variable bindings.  SXEmacs Lisp does not have
 closures.
 
 
-@node Impl of Scope
+@node Impl of Scope, Using Scoping, Extent, Variable Scoping
 @subsection Implementation of Dynamic Scoping
 @cindex deep binding
 
@@ -948,7 +948,7 @@ binding, but runs faster, since there is never a need to search for a
 binding.
 
 
-@node Using Scoping
+@node Using Scoping,  , Impl of Scope, Variable Scoping
 @subsection Proper Use of Dynamic Scoping
 
   Binding a variable in one function and using it in another is a
@@ -984,7 +984,7 @@ compiler.  Choose the variable's name to avoid name conflicts---don't
 use short names like @code{x}.
 
 
-@node Buffer-Local Variables
+@node Buffer-Local Variables, Variable Aliases, Variable Scoping, Variables
 @section Buffer-Local Variables
 @cindex variables, buffer-local
 @cindex buffer-local variables
@@ -1004,7 +1004,7 @@ important customization method.
 @end menu
 
 
-@node Intro to Buffer-Local
+@node Intro to Buffer-Local, Creating Buffer-Local, Buffer-Local Variables, Buffer-Local Variables
 @subsection Introduction to Buffer-Local Variables
 
   A buffer-local variable has a buffer-local binding associated with a
@@ -1056,7 +1056,7 @@ buffer-local bindings for the buffer that holds the file within SXEmacs.
 @xref{Auto Major Mode}.
 
 
-@node Creating Buffer-Local
+@node Creating Buffer-Local, Default Value, Intro to Buffer-Local, Buffer-Local Variables
 @subsection Creating and Deleting Buffer-Local Bindings
 
 @deffn Command make-local-variable variable
@@ -1220,7 +1220,7 @@ locals are appropriate for data pertaining to where the file came from
 or how to save it, rather than with how to edit the contents.
 
 
-@node Default Value
+@node Default Value,  , Creating Buffer-Local, Buffer-Local Variables
 @subsection The Default Value of a Buffer-Local Variable
 @cindex default value
 
@@ -1338,7 +1338,7 @@ evaluated.
 @end defun
 
 
-@node Variable Aliases
+@node Variable Aliases,  , Buffer-Local Variables, Variables
 @section Variable Aliases
 @cindex variables, indirect
 @cindex indirect variables
