--- a/info/lispref/x-windows.texi
+++ b/info/lispref/x-windows.texi
@@ -27,7 +27,7 @@ generalize well, and they are covered specially here.
 @end menu
 
 
-@node X Selections
+@node X Selections, X Server, X-Windows, X-Windows
 @section X Selections
 @cindex selection (for X windows)
 
@@ -95,7 +95,7 @@ This function is called @code{x-set-cut-buffer} in FSF Emacs.
 @end defun
 
 
-@node X Server
+@node X Server, X Miscellaneous, X Selections, X-Windows
 @section X Server
 
 This section describes how to access and change the overall status of
@@ -108,7 +108,7 @@ the X server SXEmacs is using.
 @end menu
 
 
-@node Resources
+@node Resources, Server Data, X Server, X Server
 @subsection Resources
 
 @defun default-x-device
@@ -262,7 +262,7 @@ resources are found for the application class ``SXEmacs''.
 @end defvar
 
 
-@node Server Data
+@node Server Data, Grabs, Resources, X Server
 @subsection Data about the X Server
 
   This section describes functions and a variable that you can use to
@@ -292,7 +292,7 @@ from previous versions of SXEmacs, which returned @code{StaticGray},
 @end defun
 
 
-@node Grabs
+@node Grabs,  , Server Data, X Server
 @subsection Restricting Access to the Server by Other Apps
 
 @defun x-grab-keyboard &optional device
@@ -326,7 +326,7 @@ used.  If it is @code{t} the pointer will be released on all X devices.
 @end defun
 
 
-@node X Miscellaneous
+@node X Miscellaneous,  , X Server, X-Windows
 @section Miscellaneous X Functions and Variables
 
 @defvar x-bitmap-file-path
