--- a/info/lispref/consoles-devices.texi
+++ b/info/lispref/consoles-devices.texi
@@ -5,7 +5,7 @@
 @c See the file lispref.texi for copying conditions.
 @setfilename ../../info/consoles-devices.info
 
-@node Consoles and Devices, Positions, Frames, top
+@node Consoles and Devices, Positions, Frames, Top
 @chapter Consoles and Devices
 @cindex devices
 @cindex consoles
