--- a/info/lispref/debugging.texi
+++ b/info/lispref/debugging.texi
@@ -42,7 +42,7 @@ Afterward, you can examine the file to find out what input was used.
 @code{open-termscript} function can be useful.  @xref{Terminal Output}.
 
 
-@node Debugger
+@node Debugger, Syntax Errors, Debugging, Debugging
 @section The Lisp Debugger
 @cindex debugger
 @cindex Lisp debugger
@@ -69,7 +69,7 @@ debugger recursively.  @xref{Recursive Editing}.
 @end menu
 
 
-@node Error Debugging
+@node Error Debugging, Infinite Loops, Debugger, Debugger
 @subsection Entering the Debugger on an Error
 @cindex error debugging
 @cindex debugging errors
@@ -136,7 +136,7 @@ this:
 @end example
 
 
-@node Infinite Loops
+@node Infinite Loops, Function Debugging, Error Debugging, Debugger
 @subsection Debugging Infinite Loops
 @cindex infinite loops
 @cindex loops, infinite
@@ -168,7 +168,7 @@ when you quit.  @xref{Quitting}.
 @end defopt
 
 
-@node Function Debugging
+@node Function Debugging, Explicit Debug, Infinite Loops, Debugger
 @subsection Entering the Debugger on a Function Call
 @cindex function call debugging
 @cindex debugging specific functions
@@ -251,7 +251,7 @@ returns @var{function-name}.
 @end deffn
 
 
-@node Explicit Debug
+@node Explicit Debug, Using Debugger, Function Debugging, Debugger
 @subsection Explicit Entry to the Debugger
 
   You can cause the debugger to be called at a certain point in your
@@ -267,7 +267,7 @@ program!)  The most common suitable places are inside a @code{progn} or
 an implicit @code{progn} (@pxref{Sequencing}).
 
 
-@node Using Debugger
+@node Using Debugger, Debugger Commands, Explicit Debug, Debugger
 @subsection Using the Debugger
 
   When the debugger is entered, it displays the previously selected
@@ -306,7 +306,7 @@ interpreted.
 
 @need 3000
 
-@node Debugger Commands
+@node Debugger Commands, Invoking the Debugger, Using Debugger, Debugger
 @subsection Debugger Commands
 @cindex debugger command list
 
@@ -402,7 +402,7 @@ until the problem is corrected.
 @end table
 
 
-@node Invoking the Debugger
+@node Invoking the Debugger, Internals of Debugger, Debugger Commands, Debugger
 @subsection Invoking the Debugger
 
   Here we describe fully the function used to invoke the debugger.
@@ -502,7 +502,7 @@ under which @code{debug} is called.
 @need 5000
 
 
-@node Internals of Debugger
+@node Internals of Debugger,  , Invoking the Debugger, Debugger
 @subsection Internals of the Debugger
 
   This section describes functions and variables used internally by the
@@ -650,7 +650,7 @@ If @var{frame-number} is out of range, @code{backtrace-frame} returns
 @end defun
 
 
-@node Syntax Errors
+@node Syntax Errors, Compilation Errors, Debugger, Debugging
 @section Debugging Invalid Lisp Syntax
 
   The Lisp reader reports invalid syntax, but cannot say where the real
@@ -676,7 +676,7 @@ Lisp, and we can give further advice for those cases.
 @end menu
 
 
-@node Excess Open
+@node Excess Open, Excess Close, Syntax Errors, Syntax Errors
 @subsection Excess Open Parentheses
 
   The first step is to find the defun that is unbalanced.  If there is
@@ -713,7 +713,7 @@ and you have put back those parentheses, @kbd{C-M-q} should not change
 anything.
 
 
-@node Excess Close
+@node Excess Close,  , Excess Open, Syntax Errors
 @subsection Excess Close Parentheses
 
   To deal with an excess close parenthesis, first insert an open
@@ -743,7 +743,7 @@ and you have put back those parentheses, @kbd{C-M-q} should not change
 anything.
 
 
-@node Compilation Errors, Edebug, Syntax Errors, Debugging
+@node Compilation Errors,  , Syntax Errors, Debugging
 @section Debugging Problems in Compilation
 
   When an error happens during byte compilation, it is normally due to
