--- a/info/lispref/dialog.texi
+++ b/info/lispref/dialog.texi
@@ -14,7 +14,7 @@
 * Dialog Box Functions::
 @end menu
 
-@node Dialog Box Format
+@node Dialog Box Format, Dialog Box Functions, Dialog Boxes, Dialog Boxes
 @section Dialog Box Format
 
 A dialog box description is a list.
@@ -58,7 +58,7 @@ The syntax, more precisely:
 @end example
 
 
-@node Dialog Box Functions
+@node Dialog Box Functions,  , Dialog Box Format, Dialog Boxes
 @section Dialog Box Functions
 
 @defun popup-dialog-box dbox-desc
