--- a/info/lispref/files.texi
+++ b/info/lispref/files.texi
@@ -40,7 +40,7 @@ substitutions such as @samp{$HOME}.  @xref{File Name Expansion}.
 @end menu
 
 
-@node Visiting Files
+@node Visiting Files, Saving Buffers, Files, Files
 @section Visiting Files
 @cindex finding files
 @cindex visiting files
@@ -73,7 +73,7 @@ however, it is good to keep the distinction in mind.
 @end menu
 
 
-@node Visiting Functions
+@node Visiting Functions, Subroutines of Visiting, Visiting Files, Visiting Files
 @subsection Functions for Visiting Files
 
   This section describes the functions normally used to visit files.
@@ -201,7 +201,7 @@ used and they may not all be called.
 @end defvar
 
 
-@node Subroutines of Visiting
+@node Subroutines of Visiting,  , Visiting Functions, Visiting Files
 @subsection Subroutines of Visiting
 
   The @code{find-file-noselect} function uses the
@@ -262,7 +262,7 @@ in @code{find-file-hooks}.
 @end defun
 
 
-@node Saving Buffers
+@node Saving Buffers, Reading from Files, Visiting Files, Files
 @section Saving Buffers
 
   When you edit a file in SXEmacs, you are actually working on a buffer
@@ -405,7 +405,7 @@ major modes set it to @code{t} in particular buffers.
 @end defopt
 
 
-@node Reading from Files
+@node Reading from Files, Writing to Files, Saving Buffers, Files
 @section Reading from Files
 
   You can copy a file from the disk and insert it into a buffer
@@ -453,7 +453,7 @@ program can read the file, use the function @code{file-local-copy}; see
 @ref{Magic File Names}.
 
 
-@node Writing to Files
+@node Writing to Files, File Locks, Reading from Files, Files
 @section Writing to Files
 
   You can write the contents of a buffer, or part of a buffer, directly
@@ -512,7 +512,7 @@ files that the user does not need to know about.
 @end deffn
 
 
-@node File Locks
+@node File Locks, Information about Files, Writing to Files, Files
 @section File Locks
 @cindex file locks
 
@@ -596,7 +596,7 @@ for its usual definition is in @file{userlock.el}.
 @end defun
 
 
-@node Information about Files
+@node Information about Files, Changing File Attributes, File Locks, Files
 @section Information about Files
 
   The functions described in this section all operate on strings that
@@ -613,7 +613,7 @@ or directories unless otherwise noted.
 @end menu
 
 
-@node Testing Accessibility
+@node Testing Accessibility, Kinds of Files, Information about Files, Information about Files
 @subsection Testing Accessibility
 @cindex accessibility of a file
 @cindex file accessibility
@@ -749,7 +749,7 @@ time as a list of two numbers.  @xref{File Attributes}.
 @end defun
 
 
-@node Kinds of Files
+@node Kinds of Files, Truenames, Testing Accessibility, Information about Files
 @subsection Distinguishing Kinds of Files
 
   This section describes how to distinguish various kinds of files, such
@@ -823,7 +823,7 @@ other I/O device).
 @end defun
 
 
-@node Truenames
+@node Truenames, File Attributes, Kinds of Files, Information about Files
 @subsection Truenames
 @cindex truename (of file)
 
@@ -849,7 +849,7 @@ value of @code{default-directory} is used.
   @xref{Buffer File Name}, for related information.
 
 
-@node File Attributes
+@node File Attributes,  , Truenames, Information about Files
 @subsection Other Information about Files
 
   This section describes the functions for getting detailed information
@@ -1043,7 +1043,7 @@ is on file system number -32252.
 @end defun
 
 
-@node Changing File Attributes
+@node Changing File Attributes, File Names, Information about Files, Files
 @section Changing File Names and Attributes
 @cindex renaming files
 @cindex copying files
@@ -1217,7 +1217,7 @@ This function returns the current default protection value.
 @end defun
 
 
-@node File Names
+@node File Names, Contents of Directories, Changing File Attributes, Files
 @section File Names
 @cindex file names
 
@@ -1246,7 +1246,7 @@ directory.
 @end menu
 
 
-@node File Name Components
+@node File Name Components, Directory Names, File Names, File Names
 @subsection File Name Components
 @cindex directory part (of file name)
 @cindex nondirectory part (of file name)
@@ -1336,7 +1336,7 @@ The extension, in a file name, is the part that starts with the last
 @end defun
 
 
-@node Directory Names
+@node Directory Names, Relative File Names, File Name Components, File Names
 @subsection Directory Names
 @cindex directory name
 @cindex file name of directory
@@ -1438,7 +1438,7 @@ directory.
 @end defun
 
 
-@node Relative File Names
+@node Relative File Names, File Name Expansion, Directory Names, File Names
 @subsection Absolute and Relative File Names
 @cindex absolute file name
 @cindex relative file name
@@ -1472,7 +1472,7 @@ file name, @code{nil} otherwise.
 @end defun
 
 
-@node File Name Expansion
+@node File Name Expansion, Unique File Names, Relative File Names, File Names
 @subsection Functions that Expand Filenames
 @cindex expansion of file names
 
@@ -1605,7 +1605,7 @@ example:
 @end defun
 
 
-@node Unique File Names
+@node Unique File Names, File Name Completion, File Name Expansion, File Names
 @subsection Generating Unique File Names
 
   Some programs need to write temporary files.  Here is the usual way to
@@ -1651,7 +1651,7 @@ To avoid confusion, each Lisp application should preferably use a unique
 @end defun
 
 
-@node File Name Completion
+@node File Name Completion, User Name Completion, Unique File Names, File Names
 @subsection File Name Completion
 @cindex file name completion subroutines
 @cindex completion, file name
@@ -1753,7 +1753,7 @@ completion-ignored-extensions
 @end defopt
 
 
-@node User Name Completion
+@node User Name Completion,  , File Name Completion, File Names
 @subsection User Name Completion
 @cindex user name completion subroutines
 @cindex completion, user name
@@ -1789,7 +1789,7 @@ completion was unique.
 @end defun
 
 
-@node Contents of Directories
+@node Contents of Directories, Create/Delete Dirs, File Names, Files
 @section Contents of Directories
 @cindex directory-oriented functions
 @cindex file names in directory
@@ -1912,7 +1912,7 @@ for the function @code{insert-directory}.
 @end defvar
 
 
-@node Create/Delete Dirs
+@node Create/Delete Dirs, Magic File Names, Contents of Directories, Files
 @section Creating and Deleting Directories
 @c Emacs 19 features
 
@@ -1940,7 +1940,7 @@ must use @code{delete-directory} in that case.
 @end deffn
 
 
-@node Magic File Names
+@node Magic File Names, Partial Files, Create/Delete Dirs, Files
 @section Making Certain File Names ``Magic''
 @cindex magic file names
 
@@ -2086,7 +2086,7 @@ is a good way to come up with one.
 @end defun
 
 
-@node Partial Files
+@node Partial Files, Format Conversion, Magic File Names, Files
 @section Partial Files
 @cindex partial files
 
@@ -2096,7 +2096,7 @@ is a good way to come up with one.
 * Detached Partial Files::
 @end menu
 
-@node Intro to Partial Files
+@node Intro to Partial Files, Creating a Partial File, Partial Files, Partial Files
 @subsection Intro to Partial Files
 
 A @dfn{partial file} is a section of a buffer (called the @dfn{master
@@ -2121,7 +2121,7 @@ automatically marked as modified so that saving the master buffer will
 work correctly.
 
 
-@node Creating a Partial File
+@node Creating a Partial File, Detached Partial Files, Intro to Partial Files, Partial Files
 @subsection Creating a Partial File
 
 @deffn Command make-file-part &optional start end name buffer
@@ -2140,7 +2140,7 @@ respectively.
 @end deffn
 
 
-@node Detached Partial Files
+@node Detached Partial Files,  , Creating a Partial File, Partial Files
 @subsection Detached Partial Files
 
 Every partial file has an extent in the master buffer associated with it
@@ -2161,7 +2161,7 @@ part's filename is cleared and thus must be explicitly specified if the
 detached file part is to be saved.
 
 
-@node Format Conversion
+@node Format Conversion,  , Partial Files, Files
 @section File Format Conversion
 
 @cindex file format conversion
