--- a/info/lispref/gutter.texi
+++ b/info/lispref/gutter.texi
@@ -7,7 +7,7 @@
 @c See the file lispref.texi for copying conditions.
 @setfilename ../../info/gutter.info
 
-@node Gutter, Scrollbars, Toolbar, top
+@node Gutter, Scrollbars, Toolbar, Top
 @chapter Gutter
 @cindex gutter
 
