--- a/info/lispref/ldap.texi
+++ b/info/lispref/ldap.texi
@@ -5,7 +5,7 @@
 @c See the file lispref.texi for copying conditions.
 @setfilename ../../info/ldap.info
 
-@node LDAP Support, PostgreSQL Support, X-Windows, top
+@node LDAP Support, PostgreSQL Support, X-Windows, Top
 @chapter LDAP Support
 @cindex LDAP
 
