--- a/info/lispref/menus.texi
+++ b/info/lispref/menus.texi
@@ -22,7 +22,7 @@
 @end menu
 
 
-@node Menu Format
+@node Menu Format, Menubar Format, Menus, Menus
 @section Format of Menus
 @cindex menu format
 @cindex format of menus
@@ -254,7 +254,7 @@ For example:
 @end example
 
 
-@node Menubar Format
+@node Menubar Format, Menubar, Menu Format, Menus
 @section Format of the Menubar
 @cindex menubar format
 @cindex format of the menubar
@@ -277,7 +277,7 @@ yet.)
 @end itemize
 
 
-@node Menubar
+@node Menubar, Modifying Menus, Menubar Format, Menus
 @section Menubar
 @cindex menubar
 
@@ -354,7 +354,7 @@ without a selection having been made.
 @end defvar
 
 
-@node Modifying Menus
+@node Modifying Menus, Menu Filters, Menubar, Menus
 @section Modifying Menus
 
 The following functions are provided to modify the menubar of one of its
@@ -484,7 +484,7 @@ item is already present, it will not be moved.
 @end defun
 
 
-@node Menu Filters
+@node Menu Filters, Pop-Up Menus, Modifying Menus, Menus
 @section Menu Filters
 @cindex menu filters
 
@@ -539,7 +539,7 @@ more information.
 @end defun
 
 
-@node Pop-Up Menus
+@node Pop-Up Menus, Menu Accelerators, Menu Filters, Menus
 @section Pop-Up Menus
 @cindex pop-up menu
 
@@ -607,7 +607,7 @@ It should be bound to a mouse button event.
 @end deffn
 
 
-@node Menu Accelerators
+@node Menu Accelerators, Buffers Menu, Pop-Up Menus, Menus
 @section Menu Accelerators
 @cindex menu accelerators
 @cindex keyboard menu accelerators
@@ -626,7 +626,7 @@ activate that item.
 @end menu
 
 
-@node Creating Menu Accelerators
+@node Creating Menu Accelerators, Keyboard Menu Traversal, Menu Accelerators, Menu Accelerators
 @subsection Creating Menu Accelerators
 
 Menu accelerators are specified as part of the menubar format using the
@@ -656,7 +656,7 @@ It is possible to activate the top level menubar itself using accelerator keys.
 @xref{Menu Accelerator Functions}.
 
 
-@node Keyboard Menu Traversal
+@node Keyboard Menu Traversal, Menu Accelerator Functions, Creating Menu Accelerators, Menu Accelerators
 @subsection Keyboard Menu Traversal
 
 In addition to immediately activating a menu or menu item, the keyboard can
@@ -670,7 +670,7 @@ menu-accelerator-map.  At this point, the online help is your best bet
 for more information about how to modify the menu traversal keys.
 
 
-@node Menu Accelerator Functions
+@node Menu Accelerator Functions,  , Keyboard Menu Traversal, Menu Accelerators
 @subsection Menu Accelerator Functions
 
 @deffn Command accelerate-menu
@@ -741,7 +741,7 @@ C-M-T by itself will not activate the menubar.  Neither will pressing C-x
 followed by anything else.
 
 
-@node Buffers Menu
+@node Buffers Menu,  , Menu Accelerators, Menus
 @section Buffers Menu
 @cindex buffers menu
 
