--- a/info/lispref/range-tables.texi
+++ b/info/lispref/range-tables.texi
@@ -5,7 +5,7 @@
 @c See the file lispref.texi for copying conditions.
 @setfilename ../../info/range-tables.info
 
-@node Range Tables, Databases, Hash Tables, top
+@node Range Tables, Databases, Hash Tables, Top
 @chapter Range Tables
 @cindex Range Tables
 
@@ -32,7 +32,7 @@ Return non-@code{nil} if @var{object} is a range table.
 @end menu
 
 
-@node Introduction to Range Tables
+@node Introduction to Range Tables, Working With Range Tables, Range Tables, Range Tables
 @section Introduction to Range Tables
 
 @defun make-range-table
@@ -46,7 +46,7 @@ themselves be copied.
 @end defun
 
 
-@node Working With Range Tables
+@node Working With Range Tables,  , Introduction to Range Tables, Range Tables
 @section Working With Range Tables
 
 @defun get-range-table pos range-table &optional default
