--- a/info/lispref/scrollbars.texi
+++ b/info/lispref/scrollbars.texi
@@ -4,7 +4,7 @@
 @c See the file lispref.texi for copying conditions.
 @setfilename ../../info/glyphs.info
 
-@node Scrollbars, Drag and Drop, Gutter, top
+@node Scrollbars, Drag and Drop, Gutter, Top
 @chapter Scrollbars
 @cindex scrollbars
 
