--- a/info/lispref/tips.texi
+++ b/info/lispref/tips.texi
@@ -25,7 +25,7 @@ in the previous chapters.
 @end menu
 
 
-@node Style Tips
+@node Style Tips, Performance Tips, Tips, Tips
 @section Writing Clean Lisp Programs
 
   Here are some tips for avoiding common errors in writing Lisp code
@@ -992,7 +992,7 @@ depending on the number of semicolons.  @xref{Comments,,
 Manipulating Comments, sxemacs, The SXEmacs User's Manual}.
 
 
-@node Library Headers
+@node Library Headers,  , Comment Tips, Tips
 @section Conventional Headers for XEmacs Libraries
 @cindex header comments
 @cindex library header comments
