--- a/info/sxemacs/custom.texi
+++ b/info/sxemacs/custom.texi
@@ -34,7 +34,7 @@ file to do the customization in each session.  @xref{Init File}.
                      behavior of SXEmacs.
 @end menu
 
-@node Minor Modes
+@node Minor Modes, Variables, Customization, Customization
 @section Minor Modes
 @cindex minor modes
 
@@ -74,7 +74,7 @@ mode, it changes to @samp{FOOGAR}, instead of @samp{FOOGBAR}.@refill
 as you type them.  For example, @samp{amd} might expand to @samp{abbrev
 mode}.  @xref{Abbrevs}, for full information.
 
-@node Variables
+@node Variables, Keyboard Macros, Minor Modes, Customization
 @section Variables
 @cindex variable
 @cindex option
@@ -114,7 +114,7 @@ the left margin) to be used by the fill commands (@pxref{Filling}).
 * File Variables::      How files can specify variable values.
 @end menu
 
-@node Examining
+@node Examining, Easy Customization, Variables, Variables
 @subsection Examining and Setting Variables
 @cindex setting variables
 
@@ -172,7 +172,7 @@ sets @code{fill-column} to 75, as if you had executed the Lisp expression
   Setting variables in this way, like all means of customizing Emacs
 except where explicitly stated, affects only the current Emacs session.
 
-@node Easy Customization
+@node Easy Customization, Edit Options, Examining, Variables
 @subsection Easy Customization Interface
 
 @findex customize
@@ -195,7 +195,7 @@ structure as of yet, but we are adding the rest.)
                                 options, faces, or groups.
 @end menu
 
-@node Customization Groups
+@node Customization Groups, Changing an Option, Easy Customization, Easy Customization
 @subsubsection Customization Groups
 @cindex customization groups
 
@@ -267,7 +267,7 @@ that active field creates an ordinary customization buffer showing just
 that group and its contents, just that option, or just that face.
 This is the way to set values in it.
 
-@node Changing an Option
+@node Changing an Option, Face Customization, Customization Groups, Easy Customization
 @subsubsection Changing an Option
 
   Here is an example of what a user option looks like in the
@@ -429,7 +429,7 @@ Invoking @samp{[Done]} buries this customization buffer.  Each of the
 other fields performs an operation---set, save or reset---on each of the
 items in the buffer that could meaningfully be set, saved or reset.
 
-@node Face Customization
+@node Face Customization, Specific Customization, Changing an Option, Easy Customization
 @subsubsection Customizing Faces
 @cindex customizing faces
 @cindex bold font
@@ -491,7 +491,7 @@ get from invoking @samp{[State]}.
 @c you don't want to change that attribute.  Type @samp{none} if you want
 @c to clear out the attribute.
 
-@node Specific Customization
+@node Specific Customization,  , Face Customization, Easy Customization
 @subsubsection Customizing Specific Items
 
   Instead of finding the options you want to change by moving down
@@ -551,7 +551,7 @@ you can use two special commands to revisit your previous changes.  Use
 saved.  Use @kbd{M-x customize-customized} to look at the options and
 faces that you have set but not saved.
 
-@node Edit Options
+@node Edit Options, Locals, Easy Customization, Variables
 @subsection Editing Variable Values
 
 @table @kbd
@@ -603,7 +603,7 @@ Set the variable point is in or near to @code{nil}.
 Move to the next or previous variable.
 @end table
 
-@node Locals
+@node Locals, File Variables, Edit Options, Variables
 @subsection Local Variables
 
 @table @kbd
@@ -688,7 +688,7 @@ the case of:
 (default-value 'fill-column)
 @end example
 
-@node File Variables
+@node File Variables,  , Locals, Variables
 @subsection Local Variables in Files
 @cindex local variables in files
 
@@ -787,7 +787,7 @@ query.
 The command @code{M-x normal-mode} always obeys local variables lists
 and ignores this variable.
 
-@node Keyboard Macros
+@node Keyboard Macros, Key Bindings, Variables, Customization
 @section Keyboard Macros
 
 @cindex keyboard macros
@@ -837,7 +837,7 @@ set of commands again by invoking the macro.
 * Kbd Macro Query::     Keyboard macros that do different things each use.
 @end menu
 
-@node Basic Kbd Macro
+@node Basic Kbd Macro, Save Kbd Macro, Keyboard Macros, Keyboard Macros
 @subsection Basic Use
 
 @kindex C-x (
@@ -886,7 +886,7 @@ to the end of its definition by typing @kbd{C-u C-x (}.  This is equivalent
 to plain @kbd{C-x (} followed by retyping the whole definition so far.  As
 a consequence it re-executes the macro as previously defined.
 
-@node Save Kbd Macro
+@node Save Kbd Macro, Kbd Macro Query, Basic Kbd Macro, Keyboard Macros
 @subsection Naming and Saving Keyboard Macros
 
 @findex name-last-kbd-macro
@@ -922,7 +922,7 @@ additional Lisp code to record the keys (if any) that you have bound to the
 keyboard macro, so that the macro is reassigned the same keys when you
 load the file.
 
-@node Kbd Macro Query
+@node Kbd Macro Query,  , Save Kbd Macro, Keyboard Macros
 @subsection Executing Macros With Variations
 
 @kindex C-x q
@@ -958,7 +958,7 @@ inside the recursive edit does not become part of the macro.  During macro
 execution, the recursive edit gives you a chance to do some particularized
 editing.  @xref{Recursive Edit}.
 
-@node Key Bindings
+@node Key Bindings, Syntax, Keyboard Macros, Customization
 @section Customizing Key Bindings
 
   This section deals with the @dfn{keymaps} that define the bindings
@@ -981,7 +981,7 @@ hyphens.
                 beginners from surprises.
 @end menu
 
-@node Keymaps
+@node Keymaps, Rebinding, Key Bindings, Key Bindings
 @subsection Keymaps
 @cindex keymap
 
@@ -1085,7 +1085,7 @@ definition overriding the global one.  The character after the
 for @kbd{C-x} commands contains @code{nil}, the definition from the global
 keymap for @kbd{C-x} commands is used.@refill
 
-@node Rebinding
+@node Rebinding, Disabling, Keymaps, Key Bindings
 @subsection Changing Key Bindings
 @cindex key rebinding, this session
 @cindex rebinding keys, this session
@@ -1102,7 +1102,7 @@ local map, which affects all buffers using the same major mode.
 * Key Bindings Using Strings:: Using Strings for Changing Key Bindings
 @end menu
 
-@node Interactive Rebinding
+@node Interactive Rebinding, Programmatic Rebinding, Rebinding, Rebinding
 @subsubsection Changing Key Bindings Interactively
 @findex global-set-key
 @findex local-set-key
@@ -1165,7 +1165,7 @@ arguments, an old definition, a new definition, and a keymap, and
 redefines in that keymap all keys that were previously defined with the
 old definition to have the new definition instead.
 
-@node Programmatic Rebinding
+@node Programmatic Rebinding, Key Bindings Using Strings, Interactive Rebinding, Rebinding
 @subsubsection Changing Key Bindings Programmatically
 
   You can use the functions @code{global-set-key} and @code{define-key}
@@ -1264,7 +1264,7 @@ Here are some examples of programmatically binding keys:
 @comment ;;
 @comment (global-set-key "\^J" 'my-command)
 
-@node Key Bindings Using Strings
+@node Key Bindings Using Strings,  , Programmatic Rebinding, Rebinding
 @subsubsection Using Strings for Changing Key Bindings
 
   For backward compatibility, you can still use strings to represent
@@ -1319,7 +1319,7 @@ similar fashion:
         control @@      control space
 @end example
 
-@node Disabling
+@node Disabling,  , Rebinding, Key Bindings
 @subsection Disabling Commands
 @cindex disabled command
 
@@ -1367,7 +1367,7 @@ invoke it; it also applies if the command is invoked using @kbd{M-x}.
 Disabling a command has no effect on calling it as a function from Lisp
 programs.
 
-@node Syntax
+@node Syntax, Init File, Key Bindings, Customization
 @section The Syntax Table
 @cindex syntax table
 
@@ -1386,7 +1386,7 @@ length 256 whose elements are numbers.
 * Change: Syntax Change.  How to change the information.
 @end menu
 
-@node Syntax Entry
+@node Syntax Entry, Syntax Change, Syntax, Syntax
 @subsection Information About Each Character
 
   The syntax table entry for a character is a number that encodes six
@@ -1484,7 +1484,7 @@ to @code{nil} in modes where comment-terminator sequences are liable to
 appear where there is no comment, for example, in Lisp mode where the
 comment terminator is a newline but not every newline ends a comment.
 
-@node Syntax Change
+@node Syntax Change,  , Syntax Entry, Syntax
 @subsection Altering Syntax Information
 
   It is possible to alter a character's syntax table entry by storing a new
@@ -1536,7 +1536,7 @@ character includes both the string you have to pass to
 @code{modify-syntax-entry} to set up that character's current syntax,
 and some English to explain that string if necessary.
 
-@node Init File
+@node Init File, Audible Bell, Syntax, Customization
 @section The Init File
 @cindex init file
 @cindex init directory
@@ -1573,7 +1573,7 @@ byte-compile it to @file{init.elc}.
 * Terminal Init::   Each terminal type can have an init file.
 @end menu
 
-@node Init Syntax
+@node Init Syntax, Init Examples, Init File, Init File
 @subsection Init File Syntax
 
   The init file contains one or more Lisp function call
@@ -1631,7 +1631,7 @@ require one and some contexts require the other.
 Write a single-quote (') followed by the Lisp object you want.
 @end table
 
-@node Init Examples
+@node Init Examples, Terminal Init, Init Syntax, Init File
 @subsection Init File Examples
 
   Here are some examples of doing certain commonly desired things with
@@ -1794,7 +1794,7 @@ Enable the use of the command @code{eval-expression} without confirmation.
 @end example
 @end itemize
 
-@node Terminal Init
+@node Terminal Init,  , Init Examples, Init File
 @subsection Terminal-Specific Initialization
 
   Each terminal type can have a Lisp library to be loaded into Emacs when
@@ -1830,7 +1830,7 @@ read.  @xref{Init File}.  You can set the value in the init file to
 override part of any of the terminal-specific libraries and to define
 initializations for terminals that do not have a library.@refill
 
-@node Audible Bell
+@node Audible Bell, Faces, Init File, Customization
 @section Changing the Bell Sound
 @cindex audible bell, changing
 @cindex bell, changing
@@ -1939,7 +1939,7 @@ You type something other than @code{yes} or @code{no}
 @end table
 
 @comment  node-name,  next,  previous,  up
-@node Faces
+@node Faces, Frame Components, Audible Bell, Customization
 @section Faces
 
 SXEmacs has objects called extents and faces.  An @dfn{extent}
@@ -2082,7 +2082,7 @@ to make underlining an attribute of the face or not. If the optional
 @var{frame} argument is provided, the face is changed only in that
 frame; otherwise, it is changed in all frames.
 
-@node Frame Components
+@node Frame Components, X Resources, Faces, Customization
 @section Frame Components
 
 You can control the presence and position of most frame components, such
@@ -2092,7 +2092,7 @@ This section is not written yet.  Try the Lisp Reference Manual:
 @ref{Menubar,,,lispref,}, @ref{Toolbar Intro,,,lispref,}, and
 @ref{Gutter Intro,,,lispref,}.
 
-@node X Resources
+@node X Resources,  , Frame Components, Customization
 @section X Resources
 @cindex X resources
 @findex x-create-frame
@@ -2145,7 +2145,7 @@ Emacs*FRAME-NAME.parameter: value
 * Menubar Resources::      Specifying resources for the menubar.
 @end menu
 
-@node Geometry Resources
+@node Geometry Resources, Iconic Resources, X Resources, X Resources
 @subsection Geometry Resources
 
 To make the default size of all Emacs frames be 80 columns by 55 lines,
@@ -2225,7 +2225,7 @@ This is rather complicated, but it does seem to provide the most
 intuitive behavior with respect to the default sizes and positions of
 frames created in various ways.
 
-@node Iconic Resources
+@node Iconic Resources, Resource List, Geometry Resources, X Resources
 @subsection Iconic Resources
 
 Analogous to @code{-geometry}, the @code{-iconic} command-line option
@@ -2234,7 +2234,7 @@ always applies to the first frame created regardless of its name.
 However, it is possible to set the iconic flag on particular frames (by
 name) by using the @code{Emacs*FRAME-NAME.iconic} resource.
 
-@node Resource List
+@node Resource List, Face Resources, Iconic Resources, X Resources
 @subsection Resource List
 
 Emacs frames accept the following resources:
@@ -2371,7 +2371,7 @@ resources are used to initialize the variables
 @code{x-pointer-foreground-color} and @code{x-pointer-background-color}.
 @end table
 
-@node Face Resources
+@node Face Resources, Widgets, Resource List, X Resources
 @subsection Face Resources
 
 The attributes of faces are also per-frame. They can be specified as:
@@ -2492,7 +2492,7 @@ versions.  All X fonts can be referred to via XLFD-style names, so you
 should use those forms.  See the man pages for @samp{X(1)},
 @samp{xlsfonts(1)}, and @samp{xfontsel(1)}.
 
-@node Widgets
+@node Widgets, Menubar Resources, Face Resources, X Resources
 @subsection Widgets
 
 There are several structural widgets between the terminal EmacsFrame
@@ -2513,7 +2513,7 @@ where INVOCATION-NAME is the terminal component of the name of the
 SXEmacs executable (usually @samp{sxemacs}), and
 @samp{x-emacs-application-class} is generally @samp{Emacs}.
 
-@node Menubar Resources
+@node Menubar Resources,  , Widgets, X Resources
 @subsection Menubar Resources
 
 As the menubar is implemented as a widget which is not a part of SXEmacs
